--- a/config/algotracker-config.json
+++ b/config/algotracker-config.json
@@ -1,4 +1,4 @@
 {
     "start_interval_days":3,
-    "terms":["coronavirus", "covid","corona","wuhan","pandemic",  "outbreak", "epidemic", "cdc", "social distanc", "self-isolate", "isolation","self isolate","quarantine", "sanitizer", "toilet paper", "tp", "wipes", "world health","community spread","herd immunity","respirators","shelter in place","lockdown","n95","n-95","work from home","virus", "ventilator"]
+    "terms":["coronavirus", "covid","corona","wuhan","pandemic",  "outbreak", "epidemic", "cdc", "social distanc", "self-isolate", "isolation","self isolate","quarantine", "sanitizer", "toilet paper", "tp", "wipes", "world health","community spread","herd immunity","respirators","shelter in place","lockdown","n95","n-95","work from home","virus", "ventilator", "fauci"]
 }
