--- a/config/algotracker-setenv.sh.example
+++ b/config/algotracker-setenv.sh.example
@@ -2,6 +2,10 @@ export CS_ENV=""
 export ALGOTRACKER_BASE_DIR=""
 export ALGOTRACKER_OUTPUT_DIR=""
 export ALGOTRACKER_PAGE_DIR=""
+export ALGOTRACKER_PRAW_KEY_ID=""
+
+# Should either be "pushshift" or "praw"
+export ALGOTRACKER_POST_SOURCE=""
 
 export AIRBRAKE_ENABLED=""
 export AIRBRAKE_API_KEY=""
